packages/reference-apps/tests/syntax-error/index.js
export = async function(vec2 F) {
    return vec4(1&int[]( \
        0x6066183E, 0x60661866, 0x7C7E1866, 0x66661866, 0x7C3C7E66, 0 \
        ) [int(F.y)/8] >> -min(32,int(F.x)/8)); }
} as ReadableApp<any>;
